--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,9 +1,7 @@
 ---
-name: Tails Azimuth
+name: Ben Reilly
 avatar: /static/images/avatar.png
-occupation: Professor of Atmospheric Science
-company: Stanford University
-email: address@yoursite.com
+email: benreilly0809@gmail.com
 twitter: https://twitter.com/Twitter
 linkedin: https://www.linkedin.com
 github: https://github.com
