--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,14 +1,10 @@
 ---
 name: Ben Reilly
-avatar: /static/images/avatar.png
+avatar: /static/images/me-front.png
 email: benreilly0809@gmail.com
-twitter: https://twitter.com/Twitter
-linkedin: https://www.linkedin.com
-github: https://github.com
+twitter: https://twitter.com/benjamin_really
+linkedin: https://www.linkedin.com/in/benjamin-reilly-18b58619a/
+github: https://github.com/ben-jamming-reilly
 ---
 
-Tails Azimuth is a professor of atmospheric sciences at the Stanford AI Lab. His research interests includes complexity modelling of tailwinds, headwinds and crosswinds.
-
-He leads the clean energy group which develops 3D air pollution-climate models, writes differential equation solvers, and manufactures titanium plated air ballons. In his free time he bakes raspberry pi.
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque elit, tristique placerat feugiat ac, facilisis vitae arcu. Proin eget egestas augue. Praesent ut sem nec arcu pellentesque aliquet. Duis dapibus diam vel metus tempus vulputate.
+The name is Ben Reilly, not the spiderman clone
