--- a/data/posts/start.mdx
+++ b/data/posts/start.mdx
@@ -2,9 +2,9 @@
 title: "A quick catchup with me"
 date: "2023-10-28"
 lastmod: "2023-10-28"
-tags: ["next-js", "tailwind", "guide", "feature"]
-draft: false
-summary: "Release of Tailwind Nextjs Starter Blog template v2.0, refactored with Nextjs App directory and React Server Components setup.Discover the new features and how to migrate from V1."
+tags: ["personal"]
+draft: true
+summary: "A catchup for me"
 images: ["/static/images/twitter-card.png"]
 ---
 
