--- a/data/posts/start.mdx
+++ b/data/posts/start.mdx
@@ -3,7 +3,7 @@ title: "A quick catchup with me"
 date: "2023-10-28"
 lastmod: "2023-10-28"
 tags: ["personal"]
-draft: true
+draft: false
 summary: "A catchup for me"
 images: ["/static/images/twitter-card.png"]
 ---
