--- a/data/posts/aids.mdx
+++ b/data/posts/aids.mdx
@@ -3,7 +3,7 @@ title: "Aids and its impact"
 date: "2023-11-01"
 lastmod: "2023-11-01"
 tags: ["history", "aids", "essay"]
-draft: true
+draft: false
 summary: "What happened during the AIDS crisis"
 images: ["/static/images/twitter-card.png"]
 ---
