update formatting yo

--- a/data/posts/aids.mdx
+++ b/data/posts/aids.mdx
@@ -12,7 +12,7 @@ AIDS is a terminal illness. Known officially as acquired immunodeficiency syndro
 
 ## The Elusive Nature of AIDS
 
-According to the CDC, in 1981 what became known as the AIDS virus was first detected in a group of five young homosexual men based in Los Angeles; of which, all five men suspiciously contracted the same rare form of pneumonia (one which only occurs within weakened immune systems). After the first detected case of AIDS, reports of this apparent immune system disease began to spread all across the US. What made AIDS initially terrifying towards Americans was its effect upon its victims. AIDS crippled young men, making them helplessly bounded to wheelchairs; a picture of Kenneth Meeks portrays the image that permeated in the public conscious during the epidemic. Such sepulchral images drove public fear, one community bore the brunt of the blame.
+Much of the of fear that surrounded AIDS was caused by its elusive nature. According to the CDC, in 1981 what became known as the AIDS virus was first detected in a group of five young homosexual men based in Los Angeles; of which, all five men suspiciously contracted the same rare form of pneumonia (one which only occurs within weakened immune systems). After the first detected case of AIDS, reports of this apparent immune system disease began to spread all across the US. What made AIDS initially terrifying towards Americans was its effect upon its victims. AIDS crippled young men, making them helplessly bounded to wheel chairs; a picture of Kenneth Meeks portrays the image that permeated in the public conscious during the epidemic. Such sepulchral images drove public fear, one community bared the brunt of the blame.
 
 ## The Homosexual Community and AIDS
 
@@ -30,6 +30,14 @@ Rather than dividing the community, the AIDS epidemic unified homosexuals across
 
 Towards the 1980s, a reemergence of Christian fundamentalism took place within America. Standing diametrically opposed to the homosexual community, Evangelists took to the national stage to expatiate against homosexuals. With AIDS as a means to preach against homosexuality, pastors such as Jerry Falwell asserted that AIDS was "God's punishment for homosexuals". Politicians, viewing this as an opportunity, shifted the conversation about AIDS from a health issue to a moral issue. This shift in perspective influenced the public, and as a result, legislative action was taken against the homosexual community. In Colorado for instance, an amendment was passed in 1992 which prohibited passing laws to protect the rights of homosexuals. Such legislation, endorsed by the religious right, encapsulated the public attitude towards AIDS. No longer was AIDS simply a health issue; it was a political, social, and ethical debate that divided America.
 
+## a
+
+With the religious right taking a hold of the public discourse, soon fundamentalists found themselves with enough political capital to make changes. Clifford Rosky, professor of law at University of Utah, asserts that “although religious conservatives did not prevent the adoption of HIV- and sex-education laws, they had a profound impact on how these laws were drafted.” By 1988, seven states had adopted anti-homosexual education laws. These laws were blatantly homophobic, establishing that the homosexual lifestyle was unacceptable and caused HIV. The policies that amounted from the crisis were the result of the religious right taking advantage of ignorance and hysteria to push an agenda, rather than raising concern for those who desperately needed it. These policies and hysteria would even make martyrs out of the most unlikely of candidates.
+
+## b
+
+Despite being hemophilic, Ryan White was a typical thirteen-year-old. One day in 1984 after a suspected blood transfusion was contaminated with HIV, Ryan was diagnosed with AIDS. After being bedridden for several months, Ryan was eventually well enough to attend school. Upon his expected arrival, numerous petitions were signed by concerned parents to bar Ryan from attending school. As a result of his discrimination, Ryan found himself as a figure head for the AIDS rights movement. National media then swarmed around the subsequent lawsuit over Ryan’s exclusion from school. After winning the lawsuit, Ryan was memorialized as the face of the AIDS epidemic. The case of Ryan White portrayed to the public the incessant ignorance and fearmongering that surrounded the crisis. Even after his death in 1990, Ryan continued, post-mortem, to serve as a figure head for the epidemic, having a bill named after him which improved availability to care for victims of AIDS—called the ‘Ryan White CARE Act’.
+
 ## Conclusion: A Legacy of Activism
 
-AIDS was a devastating epidemic, but it was also a unifying force. Through fear, ignorance, and discrimination, the homosexual community, among others, rose up in unity. They rallied for medical advancements, legal protections, and social acceptance. The fight against AIDS was not just a battle against a virus but against prejudice and apathy as well. The activism born out of the crisis fostered awareness, promoted change, and left an indelible mark on society. As we reflect on this period of history, we are reminded of the power of collective action and the enduring spirit of communities that refused to be silenced.
+Broadly speaking, what caused Ryan White to be barred from attending school was both fear and ignorance. What caused Christian fundamentalists to preach hatred towards homosexuals was both fear and ignorance. So, it follows, what caused so many people to die of a debilitating disease was both fear and ignorance. Throughout the entire epidemic, fear drove the public to hysteria, this combined with the lack of knowledge led to the unnecessary suffering of those who had AIDS and those who loved someone with AIDS. AIDS wasn’t the first epidemic to ravage the US; for example, the polio virus led to thousands of deaths across the country. As such, AIDS will probably not be the last epidemic Americans see within their life time. What separated AIDS from other diseases is that it became known on a national scale. Being tied to stigmatized groups, AIDS, in some ways, allowed for homosexuals be on the forefront of national news. Why AIDS matters today is for two reasons: one, it still exists today and two, it led to precursors to the LGBTQ movement. Today more than 1.1 million Americans have HIV. While diagnosis of HIV has severely dropped since the 1980s and 1990s, the virus is still present today. Along with that, never before were homosexuals so widely covered within the news cycle. The massive media coverage in the 1980s and 1990s of the homosexual community served as the perfect catalyst for other homosexual rights policies, such as the legalization of gay marriage. Within all its tragedy, the AIDS epidemic did exhibit how society breaks down over the stress of an unknown enemy. May this terrible tragedy be a lesson for future generations.
