--- a/data/posts/aids.mdx
+++ b/data/posts/aids.mdx
@@ -30,11 +30,11 @@ Rather than dividing the community, the AIDS epidemic unified homosexuals across
 
 Towards the 1980s, a reemergence of Christian fundamentalism took place within America. Standing diametrically opposed to the homosexual community, Evangelists took to the national stage to expatiate against homosexuals. With AIDS as a means to preach against homosexuality, pastors such as Jerry Falwell asserted that AIDS was "God's punishment for homosexuals". Politicians, viewing this as an opportunity, shifted the conversation about AIDS from a health issue to a moral issue. This shift in perspective influenced the public, and as a result, legislative action was taken against the homosexual community. In Colorado for instance, an amendment was passed in 1992 which prohibited passing laws to protect the rights of homosexuals. Such legislation, endorsed by the religious right, encapsulated the public attitude towards AIDS. No longer was AIDS simply a health issue; it was a political, social, and ethical debate that divided America.
 
-## a
+## Taking Public Discourse
 
 With the religious right taking a hold of the public discourse, soon fundamentalists found themselves with enough political capital to make changes. Clifford Rosky, professor of law at University of Utah, asserts that “although religious conservatives did not prevent the adoption of HIV- and sex-education laws, they had a profound impact on how these laws were drafted.” By 1988, seven states had adopted anti-homosexual education laws. These laws were blatantly homophobic, establishing that the homosexual lifestyle was unacceptable and caused HIV. The policies that amounted from the crisis were the result of the religious right taking advantage of ignorance and hysteria to push an agenda, rather than raising concern for those who desperately needed it. These policies and hysteria would even make martyrs out of the most unlikely of candidates.
 
-## b
+## Case Against Ignorance
 
 Despite being hemophilic, Ryan White was a typical thirteen-year-old. One day in 1984 after a suspected blood transfusion was contaminated with HIV, Ryan was diagnosed with AIDS. After being bedridden for several months, Ryan was eventually well enough to attend school. Upon his expected arrival, numerous petitions were signed by concerned parents to bar Ryan from attending school. As a result of his discrimination, Ryan found himself as a figure head for the AIDS rights movement. National media then swarmed around the subsequent lawsuit over Ryan’s exclusion from school. After winning the lawsuit, Ryan was memorialized as the face of the AIDS epidemic. The case of Ryan White portrayed to the public the incessant ignorance and fearmongering that surrounded the crisis. Even after his death in 1990, Ryan continued, post-mortem, to serve as a figure head for the epidemic, having a bill named after him which improved availability to care for victims of AIDS—called the ‘Ryan White CARE Act’.
 
