--- a/data/posts/aids.mdx
+++ b/data/posts/aids.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Aids and its impact"
+title: "Aids and Its Impact"
 date: "2023-11-01"
 lastmod: "2023-11-01"
 tags: ["history", "aids", "essay"]
