--- a/data/posts/college-zoom-hack.mdx
+++ b/data/posts/college-zoom-hack.mdx
@@ -4,13 +4,15 @@ date: "2025-04-24"
 lastmod: "2025-04-24"
 tags: ["tech", "zoom", "hacks"]
 draft: false
-summary: "How I faked being present in college Zoom classes by creating a fake webcam"
-images: ["/static/images/twitter-card.png"]
+summary: "How I faked being present in my classes by creating a fake webcam"
+images: ["/static/images/fake-zoom-attention.png", "/static/images/fake-zoom-working.png"]
 ---
 
 Like most people, the pandemic was a formative time for me.
 
-It made me reconsider what I actually wanted to do with my time—and I realized that sitting through Zoom lectures wasn’t always at the top of that list. But there was one problem: my professors required cameras to be on.
+It made me reconsider what I actually wanted to do with my time—and I realized that sitting through Zoom lectures wasn’t always at the top of that list.
+
+But there was one problem: my professors required cameras to be on.
 
 So I got to work building a fake webcam.
 
